# bk7231u_freertos_aws

./: CHANGELOG.md  README.md  README_zh.md
devicetester_afreertos_win/: THIRD_PARTY_LICENSES.txt
devicetester_afreertos_win/configs/: config.json  device.json  userdata.json
devicetester_afreertos_win/configs/script_templates/: build.bat  flash.bat
devicetester_afreertos_win/tests/AFQ_1/suite/: state_machine.json  suite.json  userdata_schema.json
devicetester_afreertos_win/tests/AFQ_1/suite/cmake_build_system/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/cmake_build_system/cmakeBuildDemos/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/cmake_build_system/cmakeBuildTests/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/cmake_build_system/cmakeFileContents/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/freertos_integrity/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/freertos_integrity/freertos_integrity/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/freertos_version/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/freertos_version/freertos_version/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ble/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ble/full_ble/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_mqtt/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_mqtt/MQTT_System/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_mqtt/MQTT_Unit_API/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_mqtt/MQTT_Unit_Receive/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_mqtt/MQTT_Unit_Subscription/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_mqtt/MQTT_Unit_Validate/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/full_ota_agent/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/full_ota_pal/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eBackToBackDownload/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eCorruptImageAfterSigning/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eCorruptImageBeforeSigning/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eCorruptSignature/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eGreaterVersion/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eIncorrectPlatform/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eIncorrectWiFiPassword/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eMissingFilename/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2ePreviousVersion/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eSameVersion/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eSingleByteImage/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_ota/otae2eUntrustedCertificate/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_pkcs11/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_pkcs11/full_pkcs11_crypto_operation/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_pkcs11/full_pkcs11_general_purpose/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_securesockets/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_securesockets/full_securesockets/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_tls/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_tls/full_tls/: test.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_wifi/: group.json
devicetester_afreertos_win/tests/AFQ_1/suite/full_wifi/full_wifi/: test.json
projects/beken/: README.md
projects/beken/bk7231u/: bk7231u.ld
projects/beken/tools/: config.json
sdk/: .cproject  .project  CMakeLists.txt  generate_make.bat
sdk/libraries/abstractions/wifi/include/: aws_wifi.h
sdk/projects/: CMakeLists.txt
sdk/projects/beken/bk7231u/: bk7231u_noboot.ld
sdk/vendors/beken/: manifest.cmake
sdk/vendors/beken/beken378/: beken_sdk.mk
sdk/vendors/beken/beken378/app/: app.c
sdk/vendors/beken/beken378/func/: func.c
sdk/vendors/beken/beken378/rttos/: os_clock.c
sdk/vendors/beken/boards/bk7231u/: CMakeLists.txt
sdk/vendors/beken/boards/bk7231u/aws_demos/application_code/: user_main.c
sdk/vendors/beken/boards/bk7231u/aws_demos/config_files/: FreeRTOSConfig.h  aws_tls_config.h  iot_config.h
sdk/vendors/beken/boards/bk7231u/aws_demos/kv/: kvmgr.h
sdk/vendors/beken/boards/bk7231u/aws_tests/application_code/: user_main.c
sdk/vendors/beken/boards/bk7231u/aws_tests/config_files/: aws_test_runner_config.h  aws_test_wifi_config.h
sdk/vendors/beken/boards/bk7231u/patches/: bn_mul.h  iot_network_afr.c
sdk/vendors/beken/boards/bk7231u/ports/lwip/: ethernetif.c  lwip_mem.c  lwipopts.h  net.c
sdk/vendors/beken/boards/bk7231u/ports/pkcs11/: aws_pkcs11_pal.c
sdk/vendors/beken/boards/bk7231u/ports/wifi/: aws_wifi.c
tools/cmake/vendors/: beken.rar
tools/echo/: echo.py  mosquitto_client.key  mosquitto_client_unauth.crt
vendors/beken/beken378/app/: app.c  app.h
vendors/beken/beken378/app/config/: sys_config.h
vendors/beken/beken378/common/: typedef.h
vendors/beken/beken378/driver/common/: dd.c
vendors/beken/beken378/driver/include/: icu_pub.h
vendors/beken/beken378/driver/sdcard/: sdio_driver.c
vendors/beken/beken378/driver/sys_ctrl/: sys_ctrl.h
vendors/beken/beken378/driver/uart/: uart.c
vendors/beken/beken378/func/bk7011_cal/: manual_cal_bk7231U.c
vendors/beken/beken378/func/lwip_intf/: platform_stub.c
vendors/beken/beken378/func/misc/: fake_clock.c
vendors/beken/beken378/func/power_save/: power_save.c
vendors/beken/beken378/func/user_driver/: BkDriverFlash.c
vendors/beken/beken378/os/: mem_arch.c
vendors/beken/beken378/os/FreeRTOSv9.0.0/: rtos_pub.c
(+43 files in other folders)
